5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1578_1333.log
== TEST (2019-03-27 18:31:07) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:46:32) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print("expressao")
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:47:15) 
-- CODE:
expressao = (30 – (3 ** 2) + 8) // ((3 ** 2) * 10)
print("expressao")
-- ERROR:
File "XXXX", line 1
    expressao = (30 – (3 ** 2) + 8) // ((3 ** 2) * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:47:56) 
-- CODE:
expressao = (30 – (3 ** 2) + 8) / ((3 ** 2) * 10)
print("expressao")
-- ERROR:
File "XXXX", line 1
    expressao = (30 – (3 ** 2) + 8) / ((3 ** 2) * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:48:23) 
-- CODE:
expressao = (30 – (3 ** 2) + 8) / ((3 ** 2) * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – (3 ** 2) + 8) / ((3 ** 2) * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:48:44) 
-- CODE:
expressao = (30 – (3 ** 2) + 8) // ((3 ** 2) * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – (3 ** 2) + 8) // ((3 ** 2) * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:49:04) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:49:51) 
-- CODE:
expressao = 3-3**2+8//3**2*10
print(expressao)
-- OUTPUT:
-6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:49:55) 
-- CODE:
expressao = 3-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.197323
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:50:27) 
-- CODE:
expressao = ((3-(3**2)+8)//((3**2)*10))
print(expressao)
-- OUTPUT:
-6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:50:30) 
-- CODE:
expressao = ((3-(3**2)+8)//((3**2)*10))
print(expressao)
-- EXECUTION TIME:
0.154476
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:51:36) 
-- CODE:
expressao = (3-3**2+8//3**2*10)
print(expressao)
-- OUTPUT:
-6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:51:42) 
-- CODE:
expressao = (3-3**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.124242
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:52:00) 
-- CODE:
expressao = (30-3**2+8//3**2*10)
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:52:04) 
-- CODE:
expressao = (30-3**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.165828
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
